--- a/src/styles.scss
+++ b/src/styles.scss
@@ -229,8 +229,8 @@ img {
 .coin__title {
   display: block;
   margin-left: 8px;
-    min-width: 160px;
-text-align: left;
+  min-width: 160px;
+  // text-align: center;
 }
 
 .coin__symbol {
@@ -250,4 +250,19 @@ text-align: left;
     background-color: #1F2022;
     border: none;
   }
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+
+  li {
+    padding: 5px;
+  }
+}
+
+.activeNavButton {
+  color: lightgreen;
+  border: 1px solid cyan;
+  padding: 5px;
 }
